k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-api-svc
  namespace: demo-app
spec:
  type: NodePort
  selector:
    app: node-api
  ports:
  - port: 80
    targetPort: 3000
